--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ant-design/pro-form": "^2.31.6",
     "@ant-design/pro-layout": "^7.22.3",
     "@umijs/max": "^4.4.5",
+    "@umijs/plugin-model": "^2.6.2",
     "antd": "^5.4.0",
     "classnames": "^2.5.1",
     "monaco-editor-webpack-plugin": "^7.1.0",
