--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,13 @@
 {
-  "extends": "./src/.umi/tsconfig.json"
+  "extends": "./src/.umi/tsconfig.json",
+  "compilerOptions":  {
+    "typeRoots": [
+      "node_modules/@types",
+      "src/models"
+    ]
+  },
+  "include": [
+    "src/**/*",
+    "src/models/**/*.d.ts"
+  ]
 }
