--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
   "devDependencies": {
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.3.4",
     "husky": "^9",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
     "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-packagejson": "^2.4.3",
-    "sass": "^1.85.0",
-    "sass-loader": "^16.0.5",
     "typescript": "^5.0.3"
   }
 }
