--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
     "setup": "max setup",
     "start": "npm run dev"
   },
+  "resolutions": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@ant-design/pro-components": "^2.8.6",
     "@ant-design/pro-form": "^2.31.6",
     "@ant-design/pro-layout": "^7.22.3",
-    "@umijs/max": "^4.4.5",
+    "@umijs/max": "^4.4.6",
     "@umijs/plugin-model": "^2.6.2",
     "@umijs/plugins": "^4.4.5",
     "antd": "^5.24.2",
     "classnames": "^2.5.1",
     "copy-to-clipboard": "^3.3.3",
+    "dva": "^2.4.1",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "query-string": "^9.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-monaco-editor": "^0.58.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
